Scan result fixes wrap

--- a/client/common/sass/directory/_scan-result.sass
+++ b/client/common/sass/directory/_scan-result.sass
@@ -42,7 +42,7 @@ $text-left-padding: 1rem
 		margin: 0.5rem 0
 	+p-remove-first-and-last-margin
 	pre
-		overflow-x: scroll
+		white-space: pre-wrap
 		&:first-child
 			margin-top: 0
 		&:last-child
